# vtio

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates/vtansi/: Cargo.toml  README.md
crates/vtansi/src/: bitflags.rs  byte_trie.rs  debug.rs  encode.rs  lib.rs  parse.rs  registry.rs
crates/vtansi/src/derive/: mod.rs
crates/vtansi/src/macros/: mod.rs
crates/vtansi_derive/: Cargo.toml  README.md
crates/vtansi_derive/examples/: default_variants.rs  optional_value_format.rs  sgr_codes.rs
crates/vtansi_derive/src/: lib.rs
crates/vtansi_derive/src/helpers/: builders.rs  debug.rs  default_variant.rs  doc_spans.rs  field_props.rs  metadata.rs  mod.rs  repr_type.rs  struct_params.rs  type_analysis.rs  type_props.rs  variant_props.rs
crates/vtansi_derive/src/macros/: ansi_control.rs  from_ansi.rs  mod.rs  param_decoder.rs  param_encoder.rs  struct_from_ansi.rs  struct_to_ansi.rs  to_ansi.rs
crates/vtansi_derive/tests/: capturing_default_tests.rs  comprehensive_test.rs  default_variant_tests.rs  from_ansi_tests.rs  integration_test.rs  optional_value_format_tests.rs  roundtrip_tests.rs  to_ansi_tests.rs
crates/vtcmd/: Cargo.toml  README.md
crates/vtcmd/examples/: basic.rs
crates/vtcmd/src/: clear.rs  cursor.rs  lib.rs  mode.rs  query.rs  screen.rs  window.rs
crates/vtderive/: Cargo.toml  README.md
crates/vtderive/examples/: simple.rs
crates/vtderive/src/: lib.rs
crates/vtenc/: Cargo.toml  README.md
crates/vtenc/src/: encode.rs  lib.rs  parse.rs
crates/vtenc/tests/: derive_feature.rs
crates/vtinput/: Cargo.toml  README.md
crates/vtinput/benches/: parser.rs
crates/vtinput/src/: c0.rs  char.rs  csi.rs  encode.rs  esc.rs  event.rs  lib.rs  macros.rs  parser.rs  ss.rs
crates/vtinput/tests/: .gitattributes  README.md  alt_keys.txt  alt_keys_result.md  bracketed_paste_result.md  control_keys.txt  control_keys_result.md  keyboard_input.txt  keyboard_result.md  kitty_keyboard.txt  kitty_keyboard_result.md  parser.rs  utf8_handling.txt  utf8_result.md
crates/vtinput/tests/common/: mod.rs
crates/vtio/: .gitignore  Cargo.toml  README.md
crates/vtio/benches/: parser.rs
crates/vtio/examples/: encode_request.rs  test_shell.rs  vtev.rs
crates/vtio/src/: lib.rs  parser.rs  traits.rs
crates/vtio/src/event/: NOTICE.md  charset.rs  color.rs  cursor.rs  dsr.rs  iterm.rs  keyboard.rs  mod.rs  mode.rs  mouse.rs  screen.rs  scroll.rs  shell.rs  terminal.rs  text.rs  window.rs
crates/vtio/src/event/keyboard/: NOTICE.md  encoding.rs  event.rs  keycode.rs  mod.rs  mode.rs  modifier.rs  util.rs
crates/vtio/src/event/mouse/: encoding.rs  event.rs  mod.rs  mode.rs  track.rs
crates/vtio/src/parser/: common.rs  input.rs  mod.rs  output.rs
crates/vtio/tests/: README.md  alt_keys_result.md  bracketed_paste.txt  bracketed_paste_result.md  control_keys.txt  control_keys_result.md  keyboard_input.txt  keyboard_result.md  kitty_keyboard.txt  kitty_keyboard_result.md  positional_validation.rs
crates/vtio/tests/common/: mod.rs
crates/vtio_control_base/: Cargo.toml  README.md
crates/vtio_control_base/src/: bytevec.rs  esc.rs  lib.rs
crates/vtio_control_derive/: Cargo.toml  README.md
crates/vtio_control_derive/src/: lib.rs
crates/vtio_control_derive_internal/: Cargo.toml
crates/vtio_control_derive_internal/src/: lib.rs
crates/vtio_control_derive_internal/src/helpers/: field_props.rs  metadata.rs  mod.rs  type_props.rs
crates/vtio_control_registry/: Cargo.toml  README.md
crates/vtio_control_registry/src/: lib.rs
crates/vtmsg/: Cargo.toml  README.md
crates/vtmsg/examples/: encode_request.rs
crates/vtmsg/src/: buffer.rs  charset.rs  clear.rs  cursor.rs  dsr.rs  iterm.rs  keyboard.rs  lib.rs  macros.rs  mode.rs  mouse.rs  query.rs  screen.rs  scroll.rs  shell.rs  terminal.rs  window.rs
crates/vtparser/: Cargo.toml  README.md
crates/vtparser/src/: bytevec.rs  lib.rs  params.rs  registry.rs
crates/xparsecolor/: Cargo.toml  README.md  build.rs
crates/xparsecolor/src/: lib.rs
