[package]
name = "vtansi_derive"
description = "Derive macros for parsing ANSI control sequences."
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
vtenc = { path = "../vtenc", features = ["derive"] }