[package]
name = "vtansi_derive"
description = "Derive macros for parsing ANSI control sequences."
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1"
quote = "1"
strum = { version = "0.27.2", default-features = false, features = ["std", "derive"] }
syn = { version = "2", features = ["extra-traits", "full"] }

[dev-dependencies]
vtansi = { path = "../vtansi", features = ["derive", "bitflags"] }
num_enum = "0.7.5"
strum = { version = "0.27.2", default-features = false, features = ["std", "derive", "phf"] }
bitflags = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
linkme.workspace = true
trybuild = "1.0"
