[package]
name = "vtderive"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro2-diagnostics = "0.10"
quote = "1"
syn = { version = "2", features = ["full"] }
linkme = "0.3"

[dev-dependencies]
smallvec = { version = "1.15.0", features = ["const_new", "const_generics"] }
vtparser = { path = "../vtparser" }
vtenc = { path = "../vtenc" }
