[package]
name = "vtinput"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[features]

#! ### Optional Features

## Enables [`serde`] for various types.
serde = ["dep:serde", "bitflags/serde", "vt-push-parser/serde"]

[[bench]]
name = "parser"
path = "benches/parser.rs"
harness = false

[lib]
bench = false

[dependencies]
bitflags = { version = "2.9" }
hex = "0.4.3"
vt-push-parser = { version = "0.11.0" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[[test]]
name = "parser"
path = "tests/parser.rs"
harness = false
