[package]
name = "vtmsg"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[features]
#! ### Optional Features
## Enables [`serde`] for various types.
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitflags = { version = "2.9" }
vtenc = { path = "../vtenc" }
serde = { version = "1.0", features = ["derive"], optional = true }
paste = "1.0"

[dev-dependencies]
vtinput = { path = "../vtinput" }
bytes = "1.0"
