[package]
name = "vtmsg"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[features]
#! ### Optional Features
## Enables [`serde`] for various types.
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitflags = { version = "2.9" }
vtenc = { path = "../vtenc" }
serde = { version = "1.0", features = ["derive"], optional = true }
paste = "1.0"
vtderive = { path = "../vtderive" }
linkme = "0.3"
vtparser = { version = "0.0.0", path = "../vtparser" }
smallvec = { version = "1.15.1", features = ["const_new", "const_generics"] }

[dev-dependencies]
bytes = "1.0"
