[package]
name = "vtparser"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[features]

#! ### Optional Features

## Enables [`serde`] for various types.
serde = ["dep:serde", "vt-push-parser/serde"]

[dependencies]
smallvec = { version = "1.15.0", features = ["const_new", "const_generics"] }
vt-push-parser = { version = "0.11.0" }
vtenc = { path = "../vtenc" }
serde = { version = "1.0", features = ["derive"], optional = true }
linkme = "0.3"
derive_more = { version = "2.0.1", features = ["try_from"] }
