[package]
name = "xparsecolor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]

[dependencies]
palette = { version = "0.7", default-features = false, features = ["std", "phf"] }
phf = { version = "0.11", default-features = false, features = ["std"] }
zmij = "1.0"

[build-dependencies]
phf_codegen = "0.11"

[features]
